<resources>
    <string name="app_name">Mood Tracker HW2020</string>

    <string name="enter_a_password">Enter a Password:</string>

    <string name="emotion_angry">Angry</string>
    <string name="emotion_happy">Happy</string>
    <string name="emotion_sad">Sad</string>
    <string name="emotion_tired">Tired</string>
    <string name="string_submit">Submit</string>
    <string name="emotion_stress">Stressed</string>
    <string name="username_hint">Enter a Username:</string>
    <string name="mood_history">Your Mood History</string>
    <string name="back">back</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>