<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="71dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-thin"
        android:lineSpacingExtra="8sp"
        android:text="Welcome {Name}, how are you?"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#130F0F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/happyBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="188dp"
        android:checked="false"
        android:text="@string/emotion_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/sadBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="260dp"
        android:text="@string/emotion_sad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/tiredSpinner"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="392dp"
        app:layout_constraintStart_toEndOf="@+id/tiredBox"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sadSpinner"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toEndOf="@+id/sadBox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/stressBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="12dp"
        android:text="@string/emotion_stress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiredBox" />

    <Spinner
        android:id="@+id/stressSpinner"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="454dp"
        app:layout_constraintStart_toEndOf="@+id/stressBox"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/angrySpinner"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="328dp"
        app:layout_constraintStart_toEndOf="@+id/angryBox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/angryBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="328dp"
        android:text="@string/emotion_angry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/happySpinner"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="188dp"
        app:layout_constraintStart_toEndOf="@+id/happyBox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/tiredBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="396dp"
        android:text="@string/emotion_tired"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="157dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="532dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="634dp"
        android:onClick="submitEmotion"
        android:text="@string/string_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="load"
        android:text="Button"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="13dp" />

</androidx.constraintlayout.widget.ConstraintLayout>